--- a/Conversiones/src/com/sw/view/Interfaz.form
+++ b/Conversiones/src/com/sw/view/Interfaz.form
@@ -212,6 +212,7 @@
             <StringItem index="3" value="Hexadecimal"/>
           </StringArray>
         </Property>
+        <Property name="selectedIndex" type="int" value="1"/>
         <Property name="toolTipText" type="java.lang.String" value="Seleccione una opci&#xf3;n"/>
       </Properties>
       <AuxValues>
