--- a/AdministracionMejorada/src/com/sw/view/MaestrosGUI.form
+++ b/AdministracionMejorada/src/com/sw/view/MaestrosGUI.form
@@ -101,8 +101,11 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="jTable1">
+        <Component class="javax.swing.JTable" name="tablaMaestros">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Consolas" size="11" style="0"/>
+            </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="25">
                 <Column editable="true" title="Licenciatura" type="java.lang.String"/>
@@ -111,6 +114,7 @@
                 <Column editable="true" title="Calificaci&#xf3;n" type="java.lang.String"/>
               </Table>
             </Property>
+            <Property name="toolTipText" type="java.lang.String" value="Registros de sus alumnos"/>
           </Properties>
         </Component>
       </SubComponents>
